coralogix-unused-metrics-finder/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coralogix-unused-metrics-finder
